dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-application-dev-deployment
spec:
  selector:
    matchLabels:
      app: demo-application-dev
  replicas: 2
  template:
    metadata:
      labels:
        app: demo-application-dev
    spec:
      containers:
        - name: demo-application-dev
          image: demo-application:1.0
          ports:
            - containerPort: 8080
