dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-application-dev-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: demo-dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-application-dev-service
                port:
                  number: 8080
